fix text alignment on pdf to center

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 @tailwind base;
+ @layer base {
+
+  img {
+
+    @apply inline-block;
+
+  }
+
+} 
 @tailwind components;
 @tailwind utilities;
 
